--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-    --cor-destaque: #2346a7;
-    --cor-gradiente-preto: linear-gradient(113deg, #3e77b8 0%, #1e2325 44.96%, #074079 100%);
+    --cor-destaque: #1f0519;
+    --cor-gradiente-preto: linear-gradient(113deg, #d148a4 0%, #f78ac9 44.96%, #c22091 100%);
 }
 
 * {
@@ -52,7 +52,7 @@ h1 {
 }
 
 #entrada-de-texto::placeholder {
-    color: #4b66b1;
+    color: #02091a;
     font-size: 2rem;
     font-weight: 400;
     line-height: normal;
@@ -67,7 +67,7 @@ h1 {
     border-radius: 0.5rem;
     border: none;
     background: var(--cor-destaque);
-    color: #000;
+    color: #ffffff;
     font-size: 2.5rem;
     font-weight: 500;
     line-height: normal;
